--- a/_columns/The_Big_Picture/zh-cn/2024-12-13.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-13.md
@@ -73,16 +73,20 @@ Home furnishing plays, boosted by a sunny outlook from luxury retailer **RH** ([
 在奢侈品零售商 **RH** （[RH）](https://research.investors.com/quote.aspx?symbol=RH) 阳光明媚前景的提振下，家居用品板块表现最佳。
 
 
-Fabless chip plays also outperformed, aided by group giant Broadcom, whose price jumped by nearly a quarter after the firm beat fourth-quarter earnings views. Artificial intelligence-related revenues more than tripled and the company [forecast that AI chip sales would surge](https://www.investors.com/news/technology/broadcom-stock-avgo-stock-massive-ai-chip-opportunity/) over the next three years  
+Fabless chip plays also outperformed, aided by group giant Broadcom, whose price jumped by nearly a quarter after the firm beat fourth-quarter earnings views. Artificial intelligence-related revenues more than tripled and the company [forecast that AI chip sales would surge](https://www.investors.com/news/technology/broadcom-stock-avgo-stock-massive-ai-chip-opportunity/) over the next three years  
+在集团巨头博通（Broadcom）的帮助下，无晶圆厂芯片公司也表现出色，该公司在第四季度的收益预期超过预期后，其股价上涨了近四分之一。人工智能相关收入增长了两倍多，该公司[预测 AI 芯片销量将在未来三年内激增](https://www.investors.com/news/technology/broadcom-stock-avgo-stock-massive-ai-chip-opportunity/)
 
 
-One the flip side, department stores, office supply retailers, steel producers, toy companies and database software plays all struggled.  
+One the flip side, department stores, office supply retailers, steel producers, toy companies and database software plays all struggled.  
+另一方面，百货公司、办公用品零售商、钢铁生产商、玩具公司和数据库软件公司都陷入困境。
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121324.pdf).  
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121324.pdf).  
+[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121324.pdf)。
 
 
-*Please follow Michael Larkin on X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.* 
+*Please follow Michael Larkin on X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
+请关注 Michael Larkin 在 X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 上的更多分析。*
 
 
 **YOU MAY ALSO LIKE: 您可能还喜欢：**
