--- a/_columns/The_Big_Picture/zh-cn/2024-12-16.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-16.md
@@ -60,7 +60,7 @@ As of Monday's close, the Nasdaq 100 boasted a brilliant year-to-date gain of 31
 
 
 Yet, a motley array of other industry groups also flourished, from oil-and-gas royalty trust companies to meat to cable and satellite telecom. They also helped boost the S&P 500 to a 0.4% gain. At the day's high of 6,085, the 500 is just a fractional gain of taking out its Dec. 6 peak of 6,099.  
-然而，从石油和天然气特许权使用费信托公司到肉类，再到有线电视和卫星电视，其他各式各样的行业团体也蓬勃发展。他们还帮助标准普尔 500 指数上涨了 0.4%。在当天的高点 6,085 点，500 点只是 12 月 6 日高点 6,099 点的一小部分涨幅。
+然而，从石油和天然气特许权使用费信托公司到肉类，再到有线电视和卫星电视，其他各种行业团体也蓬勃发展。他们还帮助标准普尔 500 指数上涨了 0.4%。在当天的高点 6,085 点，500 点只是 12 月 6 日高点 6,099 点的一小部分涨幅。
 
 
 The Russell 2000 rallied 0.6%, but the Dow Jones Industrial Average eased nearly 0.3%.  
