--- a/_columns/The_Big_Picture/zh-cn/2024-12-17.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-17.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Steps Back As Nasdaq, S&P 500 Suffer Mild Distribution Days; Fed Decision Up Next	由于纳斯达克、标准普尔 500 指数的派息日温和，股市回落;美联储决定 接下来
+  Stock Market Steps Back As Nasdaq, S&P 500 Suffer Mild Distribution Days; Fed Decision Up Next	由于纳斯达克、标准普尔 500 指数的分布日温和，股市回落;美联储决定 接下来
 date: 2024-12-17 17:38 -0800
 author: KEN SHREVE
 ---
