--- a/_columns/Stock_Of_the_Day/zh-cn/2024-12-18.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-12-18.md
@@ -16,20 +16,17 @@ author: APARNA NARAYANAN
 **ExlService Holdings** （[EXLS）](https://research.investors.com/quote.aspx?symbol=EXLS) 是[当今 IBD 股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为它吹捧推动人工智能驱动增长的商业战略转变。周三，在美联储引发更广泛的市场逆转的情况下，ExlService 股票在买入点附近大幅下跌。
 
 
-Analysts moved price targets on EXLS stock sharply higher at the end of October, FactSet shows. That followed an earnings beat-and-raise from the **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) artificial intelligence partner.  
-FactSet 显示，分析师在 10 月底将 EXLS 股票的目标价大幅上调。在此之前，**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 人工智能合作伙伴的收益超过预期并提高了收益。
+Analysts moved price targets on EXLS stock sharply higher at the end of October, FactSet shows. That followed an earnings beat-and-raise from the **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) artificial intelligence partner.  
 
 
-BPO To AI Play BPO 转 AI Play
-----------------------------
+BPO To AI Play
+--------------
 
 
-"The ongoing execution of our data and AI-led strategy enabled us to accelerate our growth," EXL CEO Rohit Kapoor said in an Oct. 29 earnings release.  
-“我们数据和人工智能主导战略的持续执行使我们能够加速增长，”EXL 首席执行官 Rohit Kapoor 在 10 月 29 日的财报中表示。
+"The ongoing execution of our data and AI-led strategy enabled us to accelerate our growth," EXL CEO Rohit Kapoor said in an Oct. 29 earnings release.  
 
 
-The New York-based company says it continues to expand from business process outsourcing (BPO) to provider of data analytics, artificial intelligence (AI) and digital solutions. Its roster of partners includes Nvidia, **Amazon** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and other Big Tech names, as well as hot startups like Databricks.  
-这家总部位于纽约的公司表示，它继续从业务流程外包 （BPO） 扩展到数据分析、人工智能 （AI） 和数字解决方案提供商。其合作伙伴名单包括 Nvidia、**Amazon** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 和其他大型科技公司，以及 Databricks 等热门初创公司。
+The New York-based company says it continues to expand from business process outsourcing (BPO) to provider of data analytics, artificial intelligence (AI) and digital solutions. Its roster of partners includes Nvidia, **Amazon** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and other Big Tech names, as well as hot startups like Databricks.  
 
 
 
