--- a/_columns/Stock_Of_the_Day/zh-cn/2024-12-18.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-12-18.md
@@ -12,8 +12,7 @@ author: APARNA NARAYANAN
 
 
 
-**ExlService Holdings** ([EXLS](https://research.investors.com/quote.aspx?symbol=EXLS)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as it touts a shift in business strategy driving AI-fueled growth. On Wednesday, ExlService stock reversed sharply lower near a buy point amid a broader Fed-induced market reversal.  
-**ExlService Holdings** （[EXLS）](https://research.investors.com/quote.aspx?symbol=EXLS) 是[当今 IBD 股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为它吹捧推动人工智能驱动增长的商业战略转变。周三，在美联储引发更广泛的市场逆转的情况下，ExlService 股票在买入点附近大幅下跌。
+**ExlService Holdings** ([EXLS](https://research.investors.com/quote.aspx?symbol=EXLS)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as it touts a shift in business strategy driving AI-fueled growth. On Wednesday, ExlService stock reversed sharply lower near a buy point amid a broader Fed-induced market reversal.  
 
 
 Analysts moved price targets on EXLS stock sharply higher at the end of October, FactSet shows. That followed an earnings beat-and-raise from the **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) artificial intelligence partner.  
@@ -31,92 +30,74 @@ The New York-based company says it continues to expand from business process out
 
 
 
-ExlService Stock Finds Key Support Near Buy PointExlService 股票在买入点附近找到关键支撑
---------------------------------------------------------------------------
+ExlService Stock Finds Key Support Near Buy Point
+-------------------------------------------------
 
 
-Shares of ExlService turned lower on the [stock market today](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/), shedding 3.1%. EXLS stock had been finding support at its 21-day exponential moving average but undercut that level Wednesday afternoon as the Fed signaled a slower pace of rate cuts.  
-ExlService 的股价[今天在股市](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/)上走低，下跌了 3.1%。EXLS 股票一直在其 21 天指数移动平均线处找到支撑，但由于美联储暗示降息步伐放缓，周三下午低于该水平。
+Shares of ExlService turned lower on the [stock market today](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/), shedding 3.1%. EXLS stock had been finding support at its 21-day exponential moving average but undercut that level Wednesday afternoon as the Fed signaled a slower pace of rate cuts.  
 
 
-The AI play showed a 47.37 [buy point](https://www.investors.com/ibd-university/how-to-buy/) from a flat base, formed entirely above the 50-day moving average, according to [MarketSurge charts](https://marketsurge.investors.com). But it neared a test of the 50-day line into Wednesday's close.  
-根据 [MarketSurge 图表](https://marketsurge.investors.com)，AI 游戏显示 47.37 [个买入点](https://www.investors.com/ibd-university/how-to-buy/)来自平坦底部，完全在 50 天移动平均线上方形成。但在周三收盘前，它接近测试 50 日线。
+The AI play showed a 47.37 [buy point](https://www.investors.com/ibd-university/how-to-buy/) from a flat base, formed entirely above the 50-day moving average, according to [MarketSurge charts](https://marketsurge.investors.com). But it neared a test of the 50-day line into Wednesday's close.  
 
 
-Shares closed around 7% below the entry, which marks the Nov. 27 record high.  
-股价收盘价比入场价低约 7%，这标志着 11 月 27 日的历史新高。
+Shares closed around 7% below the entry, which marks the Nov. 27 record high.  
 
 
-The [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/) for ExlService stock has flattened out a bit after surging since June. If the RS line moves to new highs as the AI play tries to break out, it would send a positive signal. A rising RS line means that a stock is outperforming the S&P 500 index. It is the blue line in the chart provided.  
-ExlService 股票的[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/)在 6 月以来飙升后略微趋平。如果 RS 线在 AI 游戏试图突破时升至新高，它将发出积极信号。上升的 RS 线意味着一只股票的表现优于标准普尔 500 指数。它是所提供图表中的蓝线。
+The [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/) for ExlService stock has flattened out a bit after surging since June. If the RS line moves to new highs as the AI play tries to break out, it would send a positive signal. A rising RS line means that a stock is outperforming the S&P 500 index. It is the blue line in the chart provided.  
 
 
 
-ExlService Earnings AccelerationExlService 收益加速
------------------------------------------------
+ExlService Earnings Acceleration
+--------------------------------
 
 
-The [IBD Stock Checkup tool](https://research.investors.com/stock-checkup/nasdaq-exlservice-holdings-exls.aspx) shows that ExlService stock earns a near-perfect [Composite Rating](https://education.investors.com/financialdictionary.aspx?mode=1&term=Composite+Rating+SmartSelect&termid=1) of 98 out of 99. The rating rolls various fundamental and technical metrics into one easy-to-use score.  
-[IBD 股票检查工具](https://research.investors.com/stock-checkup/nasdaq-exlservice-holdings-exls.aspx)显示，ExlService 股票获得了近乎完美的[综合评分](https://education.investors.com/financialdictionary.aspx?mode=1&term=Composite+Rating+SmartSelect&termid=1)，为 98 分（满分 99 分）。该评级将各种基本和技术指标汇总到一个易于使用的分数中。
+The [IBD Stock Checkup tool](https://research.investors.com/stock-checkup/nasdaq-exlservice-holdings-exls.aspx) shows that ExlService stock earns a near-perfect [Composite Rating](https://education.investors.com/financialdictionary.aspx?mode=1&term=Composite+Rating+SmartSelect&termid=1) of 98 out of 99. The rating rolls various fundamental and technical metrics into one easy-to-use score.  
 
 
-Additionally, EXLS shows an RS Rating of 91 and EPS Rating of 95, also out of a best-possible 99.  
-此外，EXLS 的 RS 评分为 91，EPS 评分为 95，也是最好的 99 分。
+Additionally, EXLS shows an RS Rating of 91 and EPS Rating of 95, also out of a best-possible 99.  
 
 
-The company boasts two quarters of accelerating earnings and sales growth.  
-该公司拥有两个季度的加速收益和销售额增长。
+The company boasts two quarters of accelerating earnings and sales growth.  
 
 
-In Q3, ExlService earnings swelled 19% as revenue rose 15%. Both outpaced views, FactSet shows. The Nvidia AI partner hiked guidance for the full year after delivering double-digit growth in Q3 across its data analytics business and digital operations business.  
-第三季度，ExlService 收益增长 19%，收入增长 15%。FactSet 显示，两者都超过了视图。这家 Nvidia AI 合作伙伴在第三季度的数据分析业务和数字运营业务实现两位数增长后，上调了全年指引。
+In Q3, ExlService earnings swelled 19% as revenue rose 15%. Both outpaced views, FactSet shows. The Nvidia AI partner hiked guidance for the full year after delivering double-digit growth in Q3 across its data analytics business and digital operations business.  
 
 
-"As we continue to expand our data modernization and AI solution set with innovations such as industry-specific large language models, we are well positioned to continue our momentum into the fourth quarter and beyond," CEO Kapoor said.  
-首席执行官 Kapoor 表示：“随着我们继续通过创新（例如特定于行业的大型语言模型）来扩展我们的数据现代化和 AI 解决方案集，我们有能力将我们的势头延续到第四季度及以后。
+"As we continue to expand our data modernization and AI solution set with innovations such as industry-specific large language models, we are well positioned to continue our momentum into the fourth quarter and beyond," CEO Kapoor said.  
 
 
-Analysts now forecast that ExlService earnings will increase 14% in 2024 and rise a further 16% in 2025. However, that would be down from more robust growth in the three prior years.  
-分析师现在预测，ExlService 的收益将在 2024 年增长 14%，并在 2025 年进一步增长 16%。然而，这将低于前三年更强劲的增长。
+Analysts now forecast that ExlService earnings will increase 14% in 2024 and rise a further 16% in 2025. However, that would be down from more robust growth in the three prior years.  
 
 
-Nvidia AI Underpins New EXL Insurance ProductNvidia AI 支持新的 EXL 保险产品
---------------------------------------------------------------------
+Nvidia AI Underpins New EXL Insurance Product
+---------------------------------------------
 
 
-For Q3, ExlService boasted of 13 client wins. The quarter also saw the launch of the EXL Insurance LLM (large language model), developed using Nvidia artificial intelligence (AI) software, the company said.  
-在第 3 季度，ExlService 赢得了 13 个客户。该公司表示，本季度还推出了使用 Nvidia 人工智能 （AI） 软件开发的 EXL 保险LLM（大型语言模型）。
+For Q3, ExlService boasted of 13 client wins. The quarter also saw the launch of the EXL Insurance LLM (large language model), developed using Nvidia artificial intelligence (AI) software, the company said.  
 
 
-Insurance, one of EXL's largest revenue segments, is a big growth driver. The company says its clients include nine of the top 10 U.S. insurers and six of the top 10 U.S. health care payers.  
-保险是 EXL 最大的收入部门之一，是一个巨大的增长动力。该公司表示，其客户包括美国前 10 名保险公司中的 9 家和美国前 10 名医疗保健支付方中的 6 家。
+Insurance, one of EXL's largest revenue segments, is a big growth driver. The company says its clients include nine of the top 10 U.S. insurers and six of the top 10 U.S. health care payers.  
 
 
-ExlService says it is helping these companies transform their operations using data, analytics and Genai.  
-ExlService 表示，它正在帮助这些公司使用数据、分析和 Genai 实现运营转型。
+ExlService says it is helping these companies transform their operations using data, analytics and Genai.  
 
 
-*Please follow Aparna Narayanan on X [@IBD\_Aparna](https://twitter.com/IBD_Aparna) for more coverage.  
-请在 X [@IBD\_Aparna](https://twitter.com/IBD_Aparna) 上关注 Aparna Narayanan 以获得更多报道。*
+*Please follow Aparna Narayanan on X [@IBD\_Aparna](https://twitter.com/IBD_Aparna) for more coverage.* 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists  
-最值得购买和关注的成长型股票：查看 IBD 股票列表的更新](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/)
+[Best Growth Stocks To Buy And Watch: See Updates To IBD Stock Lists](https://www.investors.com/research/best-growth-stocks-buy-watch-ibd-stock-lists/) 
 
 
-[Looking For The Next Big Stock Market Winners? Start With These 3 Steps  
-寻找下一个大赢家？从这 3 个步骤开始](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/)
+[Looking For The Next Big Stock Market Winners? Start With These 3 Steps](https://www.investors.com/research/how-to-invest-in-the-stock-market-start-with-a-simple-routine/) 
 
 
-[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros  
-加入 IBD Live 并从专业人士那里学习顶级图表阅读和交易技巧](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[Join IBD Live And Learn Top Chart Reading And Trading Techniques From Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A) 
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/) 
 
 
 
