--- a/_columns/The_Big_Picture/zh-cn/2024-12-18.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-18.md
@@ -24,123 +24,97 @@ The S&P 500 lost nearly 3% and closed below its [21-day exponential moving avera
 
 
 
-The Nasdaq composite slid nearly 3.6% and closed below the 21-day line also. Its loss Wednesday wiped out most of the December gains, and with it the composite's leadership it had carefully crafted. It was its largest loss on a Fed decision day since March 20, 2001.  
-纳斯达克综合指数下跌近 3.6%，收于 21 日线下方。周三的亏损抹去了 12 月的大部分收益，随之而来的是它精心打造的综合领导地位。这是自 2001 年 3 月 20 日以来美联储决策日的最大损失。
+The Nasdaq composite slid nearly 3.6% and closed below the 21-day line also. Its loss Wednesday wiped out most of the December gains, and with it the composite's leadership it had carefully crafted. It was its largest loss on a Fed decision day since March 20, 2001.  
 
 
-The Dow Jones Industrial Average fell 2.6% for its 10th consecutive decline — the longest since an 11-day losing streak that ended Oct. 4, 1974, according to Dow Jones Market Data. The Dow also fell below the 50-day average.  
-根据道琼斯市场数据，道琼斯工业平均指数连续第 10 次下跌 2.6%，这是自 1974 年 10 月 4 日结束的 11 天连跌以来最长的一次下跌。道琼斯指数也跌破 50 天均线。
+The Dow Jones Industrial Average fell 2.6% for its 10th consecutive decline — the longest since an 11-day losing streak that ended Oct. 4, 1974, according to Dow Jones Market Data. The Dow also fell below the 50-day average.  
 
 
-Small caps, which are more sensitive to interest rates, plummeted. The Russell 2000 sold off 4.4% and pierced its 50-day moving average. It was the Russell's worst performance on a Fed decision day ever recorded.  
-对利率更敏感的小盘股暴跌。罗素 2000 指数下跌 4.4% 并突破其 50 天移动平均线。这是罗素指数在美联储决策日有史以来最糟糕的表现。
+Small caps, which are more sensitive to interest rates, plummeted. The Russell 2000 sold off 4.4% and pierced its 50-day moving average. It was the Russell's worst performance on a Fed decision day ever recorded.  
 
 
-Volume rose on the Nasdaq exchange and New York Stock Exchange, which confirmed a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) for both the Nasdaq composite and S&P 500 indexes. Institutional-caliber selling is quickly building up. That danger, plus the break of support levels on the main stock indexes, is why Investor's Business Daily cut its recommended exposure level to 60%-80% from 80% to 100%.  
-纳斯达克交易所和纽约证券交易所的成交量增加，这确认了纳斯达克综合指数和标准普尔 500 指数的[分配日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)。机构级销售正在迅速建立。这种危险，加上主要股指支撑位的突破，就是《投资者商业日报》将其建议的风险敞口水平从 80% 下调至 100% 至 60%-80% 的原因。
+Volume rose on the Nasdaq exchange and New York Stock Exchange, which confirmed a [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) for both the Nasdaq composite and S&P 500 indexes. Institutional-caliber selling is quickly building up. That danger, plus the break of support levels on the main stock indexes, is why Investor's Business Daily cut its recommended exposure level to 60%-80% from 80% to 100%.  
 
 
-Breadth Worsens For Stock Market股市的广度恶化
----------------------------------------
+Breadth Worsens For Stock Market
+--------------------------------
 
 
-Breadth was decisively bearish. Declining stocks topped advancers by more than 13-1 on the NYSE and by 6-1 on the Nasdaq, according to FactSet. All 11 S&P 500 sectors fell as did nearly 90% of IBD's industry groups.  
-Breadth 果断地看跌。根据 FactSet 的数据，下跌的股票在纽约证券交易所以超过 13-1 的比分领先于上涨的股票，在纳斯达克以 6-1 的比分领先。标准普尔 500 指数的 11 个板块全部下跌，IBD 近 90% 的行业组也下跌。
+Breadth was decisively bearish. Declining stocks topped advancers by more than 13-1 on the NYSE and by 6-1 on the Nasdaq, according to FactSet. All 11 S&P 500 sectors fell as did nearly 90% of IBD's industry groups.  
 
 
-The [Cboe Market Volatility Index](https://research.investors.com/psychological-market-indicators/chart?type=volatility), or VIX, shot up 74% to 27.67. That's the highest close since Aug. 7 and a sure sign that investors are frightened.  
-[芝加哥期权交易所市场波动率指数](https://research.investors.com/psychological-market-indicators/chart?type=volatility) （VIX） 飙升 74% 至 27.67。这是自 8 月 7 日以来的最高收盘价，也是投资者感到恐惧的明确迹象。
+The [Cboe Market Volatility Index](https://research.investors.com/psychological-market-indicators/chart?type=volatility), or VIX, shot up 74% to 27.67. That's the highest close since Aug. 7 and a sure sign that investors are frightened.  
 
 
-Yet, that could be a silver lining. The VIX rose more than 20% above its 10-day moving average — an extreme spike that heralded market lows in April, August, September and November. A few other times the signal occurred, the market low was a bit fuzzy.  
-然而，这可能是一线希望。VIX 比其 10 天移动平均线上涨了 20% 以上——这一极端飙升预示着 4 月、8 月、9 月和 11 月的市场低点。其他几次信号出现时，市场低点有点模糊。
+Yet, that could be a silver lining. The VIX rose more than 20% above its 10-day moving average — an extreme spike that heralded market lows in April, August, September and November. A few other times the signal occurred, the market low was a bit fuzzy.  
 
 
-After Wednesday's thrashing, multiple leading stocks suffered significant damage. The IBD 50 index slid 4.8%.  
-在周三的暴跌之后，多只主要股票遭受了重大损失。IBD 50 指数下跌 4.8%。
+After Wednesday's thrashing, multiple leading stocks suffered significant damage. The IBD 50 index slid 4.8%.  
 
 
-**Blue Owl Capital** ([OWL](https://research.investors.com/quote.aspx?symbol=OWL)), **Howmet Aerospace** ([HWM](https://research.investors.com/quote.aspx?symbol=HWM)), **Comfort Systems** ([FIX](https://research.investors.com/quote.aspx?symbol=FIX)), **Corcept Therapeutics** ([CORT](https://research.investors.com/quote.aspx?symbol=CORT)) and **Clearwater Analytics** ([CWAN](https://research.investors.com/quote.aspx?symbol=CWAN)) closed below their 50-day lines.  
-**Blue Owl Capital** （[OWL](https://research.investors.com/quote.aspx?symbol=OWL)）、**Howmet Aerospace** （[HWM](https://research.investors.com/quote.aspx?symbol=HWM)）、**Comfort Systems** （[FIX](https://research.investors.com/quote.aspx?symbol=FIX)）、**Corcept Therapeutics** （[CORT](https://research.investors.com/quote.aspx?symbol=CORT)） 和 **Clearwater Analytics** （[CWAN）](https://research.investors.com/quote.aspx?symbol=CWAN) 收于其 50 日线以下。
+**Blue Owl Capital** ([OWL](https://research.investors.com/quote.aspx?symbol=OWL)), **Howmet Aerospace** ([HWM](https://research.investors.com/quote.aspx?symbol=HWM)), **Comfort Systems** ([FIX](https://research.investors.com/quote.aspx?symbol=FIX)), **Corcept Therapeutics** ([CORT](https://research.investors.com/quote.aspx?symbol=CORT)) and **Clearwater Analytics** ([CWAN](https://research.investors.com/quote.aspx?symbol=CWAN)) closed below their 50-day lines.  
 
 
-**ServiceNow** ([NOW](https://research.investors.com/quote.aspx?symbol=NOW)), **Royal Caribbean** ([RCL](https://research.investors.com/quote.aspx?symbol=RCL)), **Sezzle** ([SEZL](https://research.investors.com/quote.aspx?symbol=SEZL)), **ACI Worldwide** ([ACIW](https://research.investors.com/quote.aspx?symbol=ACIW)) and **Commvault Systems** ([CVLT](https://research.investors.com/quote.aspx?symbol=CVLT)) were some of the other highly rated stocks that came under pressure.  
-**ServiceNow** （[NOW](https://research.investors.com/quote.aspx?symbol=NOW)）、**皇家加勒比** （[RCL](https://research.investors.com/quote.aspx?symbol=RCL)）、**Sezzle** （[SEZL](https://research.investors.com/quote.aspx?symbol=SEZL)）、**ACI Worldwide** （[ACIW](https://research.investors.com/quote.aspx?symbol=ACIW)） 和 **Commvault Systems** （[CVLT）](https://research.investors.com/quote.aspx?symbol=CVLT) 是其他一些面临压力的高评级股票。
+**ServiceNow** ([NOW](https://research.investors.com/quote.aspx?symbol=NOW)), **Royal Caribbean** ([RCL](https://research.investors.com/quote.aspx?symbol=RCL)), **Sezzle** ([SEZL](https://research.investors.com/quote.aspx?symbol=SEZL)), **ACI Worldwide** ([ACIW](https://research.investors.com/quote.aspx?symbol=ACIW)) and **Commvault Systems** ([CVLT](https://research.investors.com/quote.aspx?symbol=CVLT)) were some of the other highly rated stocks that came under pressure.  
 
 
-That type of action is enough for investors to start raising cash. With the change in market exposure, it's smart to take some profits and be vigilant about sell signals. [Cutting losses short](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/) is vitally important at this point.  
-这种类型的行动足以让投资者开始筹集现金。随着市场敞口的变化，明智的做法是获利并对卖出信号保持警惕。在这一点上[，减少损失](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/)至关重要。
+That type of action is enough for investors to start raising cash. With the change in market exposure, it's smart to take some profits and be vigilant about sell signals. [Cutting losses short](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/) is vitally important at this point.  
 
 
-Fed Outlook Chills Stock Market美联储前景让股市寒意
------------------------------------------
-
-
-The Federal Reserve Wednesday concluded with what just about everyone expected: a quarter-point cut in the Fed funds rate. But the central bank surprised Wall Street with a thinner slate of planned rate cuts for next year.  
-美联储周三得出了几乎所有人的预期：联邦基金利率下调 25 个基点。但央行出乎华尔街的意料，明年降息计划的数量减少了。
-
-
-The Fed's forecasts showed [only two quarter-point rate cuts in 2025](https://www.investors.com/news/economy/federal-reserve-meeting-december-rate-cut-jerome-powell-trump-sp-500/). That's half the cuts the Federal Reserve penciled in during September, and Fed Chair Jerome Powell called the economy's performance strong enough to keep monetary policy on a steady pace.  
-美联储的预测显示，[2025 年仅降息两次 25 个基点](https://www.investors.com/news/economy/federal-reserve-meeting-december-rate-cut-jerome-powell-trump-sp-500/)。这是美联储 9 月份降息幅度的一半，美联储主席杰罗姆鲍威尔称经济表现足够强劲，可以保持货币政策稳定。
-
-
-"From here, it's a new phase, and we're going to be cautious about further cuts," Powell said. Some policymakers factored in the potential for more inflation if President-elect Donald Trump carries out threats of more tariffs.  
-鲍威尔说：“从现在开始，这是一个新阶段，我们将对进一步降息持谨慎态度。一些政策制定者考虑到，如果当选总统唐纳德·特朗普（Donald Trump）威胁征收更多关税，可能会有更多的通胀。
-
-
-Federal Reserve officials' median forecast for the Fed funds rate at the end of 2025 is now at 3.9%, vs. the previous forecast of 3.4%.  
-美联储官员对 2025 年底联邦基金利率的预测中值目前为 3.9%，而之前的预测为 3.4%。
-
-
-Even the widely expected quarter-point rate cut Wednesday came with a hitch. Cleveland Fed President Beth Hammack voted against it, saying the Fed should have left rates unchanged at a 4.5% to 4.75% target rate.  
-即使是普遍预期的周三降息 25 个基点也出现了麻烦。克利夫兰联储主席贝丝·哈马克 （Beth Hammack） 投了反对票，称美联储应该将利率维持在 4.5% 至 4.75% 的目标利率不变。
-
-
-The 10-year Treasury yield jumped 11 basis points to 4.49%.  
-10 年期美国国债收益率上涨 11 个基点至 4.49%。
-
-
-No Cheer For Stock Market股市没有欢呼
+Fed Outlook Chills Stock Market
 -------------------------------
 
 
-"Goodbye punch bowl. No Christmas cheer from the Fed," TradeStation Global Head of Market Strategy David Russell said in a note to the media. "Policymakers see higher inflation and lower unemployment (next year). There is simply no reason to be dovish given that outlook. The easy lifting is done now that rates are no longer clearly restrictive. It's a logical time to pause."  
-“再见，潘趣酒碗。美联储没有圣诞欢呼，“TradeStation 全球市场策略主管 David Russell 在给媒体的一份报告中表示。“政策制定者认为（明年）通胀会更高，失业率会更低。鉴于这种前景，根本没有理由保持鸽派立场。现在，费率不再具有明显的限制性，因此轻松解除。现在是暂停的合乎逻辑的时候。
+The Federal Reserve Wednesday concluded with what just about everyone expected: a quarter-point cut in the Fed funds rate. But the central bank surprised Wall Street with a thinner slate of planned rate cuts for next year.  
 
 
-The Fed, Russell added, has engineered a soft landing and now "They're taking off the training wheels. Let's see if the economy can stand upright or falls over."  
-拉塞尔补充说，美联储已经设计了软着陆，现在“他们正在卸下训练轮。让我们看看经济是能挺直还是能倒退。
+The Fed's forecasts showed [only two quarter-point rate cuts in 2025](https://www.investors.com/news/economy/federal-reserve-meeting-december-rate-cut-jerome-powell-trump-sp-500/). That's half the cuts the Federal Reserve penciled in during September, and Fed Chair Jerome Powell called the economy's performance strong enough to keep monetary policy on a steady pace.  
 
 
-Investors' attention now shifts from monetary policy to the fiscal policies of the new White House, he added.  
-他补充说，投资者的注意力现在从货币政策转移到新白宫的财政政策上。
+"From here, it's a new phase, and we're going to be cautious about further cuts," Powell said. Some policymakers factored in the potential for more inflation if President-elect Donald Trump carries out threats of more tariffs.  
 
 
-"The economy is now in Trump's hands, for better or worse," Russell said.  
-“经济现在掌握在特朗普手中，无论好坏，”拉塞尔说。
+Federal Reserve officials' median forecast for the Fed funds rate at the end of 2025 is now at 3.9%, vs. the previous forecast of 3.4%.  
 
 
-[View General Market Indicators chart page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121824.pdf)
+Even the widely expected quarter-point rate cut Wednesday came with a hitch. Cleveland Fed President Beth Hammack voted against it, saying the Fed should have left rates unchanged at a 4.5% to 4.75% target rate.  
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+The 10-year Treasury yield jumped 11 basis points to 4.49%.  
 
 
-[The Four Pillars Of The IBD Methodology  
-IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
+No Cheer For Stock Market
+-------------------------
 
 
-[Risk Management In The Stock Market: How Much Money To Invest  
-股票市场的风险管理：投资多少钱](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+"Goodbye punch bowl. No Christmas cheer from the Fed," TradeStation Global Head of Market Strategy David Russell said in a note to the media. "Policymakers see higher inflation and lower unemployment (next year). There is simply no reason to be dovish given that outlook. The easy lifting is done now that rates are no longer clearly restrictive. It's a logical time to pause."  
 
 
-[IBD Live: Learn And Analyze Growth Stocks With The Pros  
-IBD Live：与专业人士一起学习和分析成长型股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
+The Fed, Russell added, has engineered a soft landing and now "They're taking off the training wheels. Let's see if the economy can stand upright or falls over."  
 
 
-[Dow Dives 1,100 Points On Fed; Chip Giant Plunges Late  
-道琼斯指数在美联储下跌 1,100 点;Chip Giant 晚些时候暴跌](https://www.investors.com/market-trend/stock-market-today/dow-jones-dives-1100-points-on-fed-outlook-tesla-skids-micron-plunges-late-on-earnings/)
+Investors' attention now shifts from monetary policy to the fiscal policies of the new White House, he added.  
+
+
+"The economy is now in Trump's hands, for better or worse," Russell said.  
+
+
+[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121824.pdf) 
+
+
+**YOU MAY ALSO LIKE:** 
+
+
+[The Four Pillars Of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/) 
+
+
+[Risk Management In The Stock Market: How Much Money To Invest](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) 
+
+
+[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A) 
+
+
+[Dow Dives 1,100 Points On Fed; Chip Giant Plunges Late](https://www.investors.com/market-trend/stock-market-today/dow-jones-dives-1100-points-on-fed-outlook-tesla-skids-micron-plunges-late-on-earnings/) 
 
 
 
